Cambios de prueba de push

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola esta es una prueba sencilla de text y maquinas virtuales.
+        Hola esta es una prueba sencilla de text y maquinas virtuales y git.
     </p>
     
 </body>
